--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,73 @@
-aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.8.0
+blinker==1.9.0
+cachetools==5.5.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
-fastapi==0.115.6
-filelock==3.16.1
-fonttools==4.55.3
+fastapi==0.115.8
+filelock==3.17.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+fonttools==4.55.8
 fsspec==2024.12.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.5
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.2.1
-opencv-python==4.10.0.84
+numpy==2.1.1
+opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
 psutil==6.1.1
 py-cpuinfo==9.0.0
-pydantic==2.10.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
 pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
-python-multipart==0.0.20
-pytz==2024.2
+python-dotenv==1.0.1
+pytz==2025.1
 PyYAML==6.0.2
 requests==2.32.3
-scipy==1.15.0
+rsa==4.9
+scipy==1.15.1
 seaborn==0.13.2
-setuptools==75.7.0
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
-starlette==0.41.3
+starlette==0.45.3
 sympy==1.13.1
-torch==2.5.1
-torchvision==0.20.1
+torch==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
 typing_extensions==4.12.2
-tzdata==2024.2
-ultralytics==8.3.58
-ultralytics-thop==2.0.13
+tzdata==2025.1
+ultralytics==8.3.70
+ultralytics-thop==2.0.14
+uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
+Werkzeug==3.1.3
